# Toy-Decompiler-with-LLVM

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  LICENSE-THIRD-PARTY  Procfile  README.MD  diff.sh  main.cpp  patch.diff  run.sh  test.sh
compiler/: .gitignore  CMakeLists.txt  README.md  diff_build.sh  main.cpp  run.sh  usefulForMac.txt
compiler/bison/: CMakeLists.txt  FindRE2C.cmake  test.txt  toy_parser.yy
compiler/codegen/: CMakeLists.txt
compiler/grammar/: Expressions.vsdx
compiler/graphviz/: AstViz.cpp  AstViz.hpp  CMakeLists.txt  graphviz.cpp  main
compiler/graphviz/astPNG/: render.dot
compiler/llvm/: CMakeLists.txt
decompiler/: CMakeLists.txt  diff.sh  run.sh  test.sh
decompiler/documents/: architecture.drawio  lifter_class_diagram.drawio
decompiler/include/codeGen/: BracketManager.h  BranchConditionalGen.h  CodeGeneration.h  DefineVariablesHandler.h  ExpandedInstr.h  GenerateFnBody.h  InstructionExpander.h  InstructionInfo.h  LoopGen.h  LoopHandler.h  RenameVariables.h  TranslateOperator.h  Variable.h
decompiler/include/codeGen/ast/: GenerateFileVisitor.h  HllAstNode.h  HllAstNodeVisitor.h  LlvmBasicBlockNode.h  LlvmFunctionNode.h  LlvmInstructionNode.h  PHINodeHandler.h  StackVarAlias.h
decompiler/include/codeGen/instructions/: ConversionInstruction.h  Instruction.h
decompiler/include/frontendQT/: FileSelectorQT.h  FileViewerQT.h  MainWindowQT.h  MySyntaxHighlighterQT.h
decompiler/include/lifter/: ExecutableType.h  LifterContext.h  StrategyFactory.h
decompiler/include/lifter/arm64/: ARM64ELFStrategy.h  ARM64StrategyFactory.h
decompiler/include/lifter/server/: RetdecClient.h
decompiler/include/lifter/x86_64/: X86_64ELFStrategy.h
decompiler/include/logger/: LoggerManager.h
decompiler/include/settings/: CodegenSettings.h  FileManager.h  JSONFileManager.h  LifterSettings.h  UdmSettings.h
decompiler/include/udm/: BBInfo.h  Interval.h  IntervalGraph.h
decompiler/include/utils/: CodeGenUtils.h  LifterUtils.h  UdmUtils.h
decompiler/output/: bsearch_guess  bsearch_guess.C  bsearch_main  conditionals_main  conditionals_two_way  conditionals_v2_if_else  conditionals_v2_main  conditionals_v2_nested_if_else  conditionals_v2_switch_case  fibbo_c_fibo  fibbo_c_main  loops_for_loop  loops_main  loops_n_way_conditional_switch  loops_nested_for  loops_while_post_tested_loop  loops_while_post_tested_loop_not_infinite  loops_while_pre_tested_loop  rod_cutting_main  test_calc_sum  test_main  tower_hanoi_main
decompiler/output/bsearch/: bsearch_guess  bsearch_main
decompiler/output/conditionals/: conditionals_main  conditionals_two_way
decompiler/output/conditionals_v2/: conditionals_v2_main  conditionals_v2_nested_if_else  conditionals_v2_switch_case
decompiler/output/fibbo_c/: fibbo_c_fibo  fibbo_c_main
decompiler/output/loops/: loops_for_loop  loops_main  loops_n_way_conditional_switch  loops_while_post_tested_loop  loops_while_pre_tested_loop
decompiler/output/rod_cutting/: rod_cutting_main
decompiler/settings/: CodegenSettings.json  LifterSettings.json  UdmSettings.json
decompiler/src/: CMakeLists.txt  main.cpp
decompiler/src/codeGen/: BracketManager.cpp  BranchConditionalGen.cpp  CMakeLists.txt  CodeGeneration.cpp  DefineVariablesHandler.cpp  ExpandedInstr.cpp  GenerateFnBody.cpp  GenerateFnHeader.cpp  InstructionExpander.cpp  InstructionInfo.cpp  LoopGen.cpp  LoopHandler.cpp  RenameVariables.cpp  TranslateOperator.cpp  Variable.cpp
decompiler/src/codeGen/ast/: GenerateFileVisitor.cpp  HllAstNode.cpp  LlvmBasicBlockNode.cpp  LlvmFunctionNode.cpp  LlvmInstructionNode.cpp  PHINodeHandler.cpp  StackVarAlias.cpp
decompiler/src/frontendQT/: CMakeLists.txt  FileSelectorQT.cpp  FileViewerQT.cpp  MainWindowQT.cpp  MySyntaxHighlighterQT.cpp
decompiler/src/lifter/: CMakeLists.txt  LifterContext.cpp  StrategyFactory.cpp
decompiler/src/settings/: CMakeLists.txt  CodegenSettings.cpp  JSONFileManager.cpp  LifterSettings.cpp  UdmSettings.cpp
decompiler/src/udm/: BBInfo.cpp  IntervalGraph.cpp  UDM.cpp
decompiler/src/utils/: CMakeLists.txt  CodeGenUtils.cpp  LifterUtils.cpp
decompiler/test/: CMakeLists.txt
decompiler/test/udm/: IntervalTest.cpp
decompiler/testing_files/: bsearch.ll
decompiler/testing_files/elfC/: bsearch  bsearch_optimized.ll  conditionals  conditionals_optimized.ll  conditionals_v2  conditionals_v2.ll  conditionals_v2_optimized.ll  fibbo_c_optimized.ll  loops  loops.ll  loops_optimized.ll  rod_cutting  rod_cutting.ll  rod_cutting_optimized.ll  test.ll  test_optimized.ll  tower_hanoi  tower_hanoi.ll  tower_hanoi_optimized.ll
decompiler/testing_files/source/: bsearch.c  conditionals_v2.c  loops.c  rod_cutting.c  test  tower_hanoi.c
src/: CMakeLists.txt  main.cpp
src/codeGen/: BranchConditionalGen.cpp  CMakeLists.txt  CodeGeneration.cpp  GenerateFnBody.cpp  GenerateFnHeader.cpp  InstructionExpander.cpp  InstructionInfo.cpp  InstructionInfoRepo.cpp  LoopGen.cpp  RenameVariables.cpp  TranslateOperator.cpp
src/codeGen/instructions/: BinaryInstruction.cpp  BitwiseBinaryInstruction.cpp  ConversionInstruction.cpp  Instruction.cpp  OtherInstruction.cpp  TerminatorInstruction.cpp  UnaryInstruction.cpp
src/lifter/: ARM64Strategy.cpp  ARM64StrategyFactory.cpp  CMakeLists.txt  ELFVisitor.cpp  ExecutableType.cpp  LifterContext.cpp  StrategyFactory.cpp  VisitorFactory.cpp  X86Strategy.cpp  X86_64ELFStrategy.cpp  X86_64StrategyFactory.cpp
src/lifter/arm64/: ARM64StrategyFactory.cpp
src/lifter/x86_64/: X86_64ELFStrategy.cpp  X86_64StrategyFactory.cpp
src/logger/: CMakeLists.txt  LoggerManager.cpp
src/udm/: BBInfo.cpp  CFGNode.cpp  CMakeLists.txt  DerivedSequence.cpp  FncInfo.cpp  FuncInfo.cpp  FunctionsAnalysis.cpp  Interval.cpp  IntervalGraph.cpp  UDM.cpp
src/udm/cfa/: CFG.cpp  CFGNode.cpp
src/utils/: CMakeLists.txt  CodeGenUtils.cpp  LifterUtils.cpp  UdmUtils.cpp
test/: CMakeLists.txt  main.cpp  plm.exe.id0  plm.exe.id1  plm.exe.id2  plm.exe.nam  plm.exe.til  test.cpp  test.exe.id0  test.exe.id1  test.exe.id2  test.exe.nam
test/udm/: IntervalGraphTest.cpp  IntervalTest.cpp  UdmTest.cpp
(+108 files in other folders)
